# SkillArena

./: .env.example  .gitignore  CLAUDE.md  FIX_PLAN.md  README.md  deliverable-auto-tasks.md  deliverable-core-infra.md  deliverable-e2e-orchestrator.md  deliverable-fusion-engine.md  deliverable-gen-data.txt  deliverable-gen.md  deliverable-import-script.md  deliverable-meta-skill.md  deliverable-skill-expansion.md  dev.cmd  pyproject.toml  temp_output.txt
arena/: __init__.py  __main__.py  config.py  deepseek_client.py  elo.py  fuse.py  judge.py  orchestrator.py  report.py  runner.py  self_improve.py  skill_metadata.py  task_dedup.py  task_generator.py
backend/: deps.py  main.py  sse.py
docs/: REQUIREMENTS.md  fusion-examples.md  self-improve-examples.md
frontend/: package-lock.json  package.json
import_skills/: .gitkeep
reports/: .gitkeep  elo_state_minimal.json  matches.jsonl  orchestrator_state.json  report_20260611_161323.md  report_20260611_161324.md  report_20260611_161325.md  report_20260611_161411.md  report_20260611_161648.md  report_20260611_161649.md  report_20260611_161817.md  report_20260611_161818.md  report_20260611_161828.md  report_20260611_161842.md  report_20260611_161843.md  report_20260611_162453.md  report_20260611_162540.md  report_20260612_104433.md  report_20260612_104434.md
scripts/: dev.py  gen_markdown_table.py  gen_meta_prompt_v1.py  gen_skills_v4pro.py  import_user_skills.py  regen_skills.py  verify_skill_expansion.py  verify_track5.py
skills/: coding-engineer.md  collected-android-ai-security.md  collected-doc-wording-review.md  (+28 more)
(+108 files in other folders)
